@@ -1,7 +1,6 @@
-
-Copyright (C) 2009-2011 Raul Jimenez and others
+Copyright (C) 2009-2012 Raul Jimenez and contributors
 Written at the Royal Institute of Technology (KTH), Stockholm (Sweden)
-This work has received funding from FP7 under grant agreement No. 216217
+This work has received funding from EU FP7 under grant agreement No. 216217
 (P2P-Next).
 
 This library is free software; you can redistribute it and/or modify it under
