@@ -14,14 +14,16 @@ class PutError(Exception):
     pass
 
 class SuperBucket(object):
-    def __init__(self, index, max_nodes):
+    def __init__(self, index, max_nodes, ips_in_table):
         self.index = index
-        self.main = Bucket(max_nodes)
-        self.replacement = Bucket(max_nodes)
+        self.main = Bucket(max_nodes, ips_in_table)
+        self.replacement = Bucket(max_nodes, set())
+        self.ips_in_table = ips_in_table
 
 class Bucket(object):
-    def __init__(self, max_rnodes):
+    def __init__(self, max_rnodes, ips_in_table):
         self.max_rnodes = max_rnodes
+        self.ips_in_table = ips_in_table
         self.rnodes = []
         self.last_maintenance_ts = time.time()
         self.last_changed_ts = 0
@@ -36,10 +38,12 @@ class Bucket(object):
         assert len(self.rnodes) < self.max_rnodes
         rnode.bucket_insertion_ts = time.time()
         self.rnodes.append(rnode)
+        self.ips_in_table.add(rnode.ip)
         #self.last_changed_ts = time.time()
 
     def remove(self, node_):
         del self.rnodes[self._find(node_)]
+        self.ips_in_table.remove(node_.ip)
         
     def __repr__(self):
         return '\n'.join(['b>'] + [repr(rnode) for rnode in self.rnodes])
@@ -121,6 +125,7 @@ class RoutingTable(object):
         self.nodes_per_bucket = nodes_per_bucket
         self.sbuckets = [None] * NUM_SBUCKETS
         self.num_rnodes = 0
+        self._ips_in_table = set()
         return
 
     def get_sbucket(self, log_distance):
@@ -129,7 +134,8 @@ class RoutingTable(object):
             raise IndexError, 'index (%d) must be >= 0' % index
         sbucket = self.sbuckets[index]
         if not sbucket:
-            sbucket = SuperBucket(index, self.nodes_per_bucket[index])
+            sbucket = SuperBucket(index, self.nodes_per_bucket[index],
+                                  self._ips_in_table)
             self.sbuckets[index] = sbucket
         return sbucket
         
