@@ -124,7 +124,8 @@ class TestController:
         #The lookup starts with a single node
         lookup_result = []
         datagrams = self.controller.get_peers(lookup_result, tc.INFO_HASH,
-                                              lambda x,y: x.append(y), 0)
+                                              lambda x,y: x.append(y), 0,
+                                              False)
         #FIXME: assert_almost_equal(ts, ping_timeout_ts)#time.time()+2)
         #FIXME: eq_(len(datagrams), 1)
 
@@ -133,7 +134,7 @@ class TestController:
         self.controller._tracker.put(info_hash, tc.CLIENT_ADDR)
         lookup_result = []
         self.controller.get_peers(lookup_result, info_hash,
-                                  lambda x,y: x.append(y), 0)
+                                  lambda x,y: x.append(y), 0, False)
         #FIXME: eq_(len(lookup_result), 1) # the node is tracking this info_hash
         #FIXME: eq_(lookup_result[0][0], tc.CLIENT_ADDR)
 
@@ -145,7 +146,7 @@ class TestController:
         ping = datagrams[0].data
         addr = datagrams[0].addr
         #this get_peers fails because there are no nodes in the routing table
-        datagrams = self.controller.get_peers(None, tc.INFO_HASH, None, 0)
+        datagrams = self.controller.get_peers(None, tc.INFO_HASH, None, 0, False)
         eq_(len(datagrams), 0)
         #fabricate response
         ping = self.servers_msg_f.incoming_msg(Datagram(ping, addr))
