@@ -2,6 +2,9 @@
 
 - Message is now a factory. Now 'private_dht_name' is a parameter instead of
   an evil global variable
+- Lookup cache
+- Security: avoid multiple routing table entries with the same IP
+
 
 == 11.8.2
 
